syntax = "proto3";

package google.example;

option java_multiple_files = true;

message Result {
    int32 an_int = 1;
    string a_string = 2;
    Detail a_detail = 3;
}

message Detail {
    bool useful = 1;
    MoreDetail even_more = 2;
    repeated MoreDetail lots_more = 3;
}

message MoreDetail {
    enum HowMuchMore {
        Some = 0;
        More = 1;
        Lots = 2;
    }
    string very_detailed = 1;
    HowMuchMore level = 2;
}

enum AnEnum {
    ZERO = 0;
    ONE = 1;
}